Fix jump button and modal cell view styling

--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -17,11 +17,11 @@
     background: #eee
 
 .modal-content
+    max-height: 80vh
     padding: 3em
     border-radius: 20px
     background: #eee
     color: #000
-
 
 .modal-close
     position: absolute
